--- a/src/app/pages/articulo/articulo.component.html
+++ b/src/app/pages/articulo/articulo.component.html
@@ -315,7 +315,7 @@
         </div>
     </div>
 
-    <!-- Modal Elminar -->
+    <!-- Modal Modificar -->
     <div class="modal fade" id="modalModificar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -331,7 +331,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" (click)="modificarArticulo()">Si</button>
+                    <button type="button" class="btn btn-primary" (click)="modificarArticulo()">Guardar cambios</button>
                 </div>
             </div>
         </div>
