--- a/src/app/pages/articulo/articulo.component.html
+++ b/src/app/pages/articulo/articulo.component.html
@@ -209,27 +209,11 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="form-group">
-                            <label for="exampleInputPassword1">Email</label>
-                            <input type="text" class="form-control" id="email_edit" formControlName="email_edit"
-                                placeholder="Ingrese el email">
-
-                            <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
-                                <div *ngIf="email.errors?.required">
-                                    Campo requerido.
-                                </div>
-                                <div *ngIf="email.errors?.minlength">
-                                    Debe tener al menos 4 caraceres.
-                                </div>
-                                <div *ngIf="email.errors?.email">
-                                    Debe ser una dirección válida.
-                                </div>
-                            </div>
-                        </div> -->
                         <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" id="estado_articulo">
-                            <label class="form-check-label" for="exampleCheck1">Marcar como Inactivo</label>
+                            <input type="checkbox" class="form-check-input" id="estado_articulo" [checked]="articuloEditar.id_estado === 2">
+                            <label class="form-check-label" for="estado_articulo">Marcar como Inactivo</label>
                         </div>
+
                         <button type="submit" class="btn btn-primary" [disabled]="articuloEditarForm.invalid"
                             (click)="submitEdit()">Grabar</button>
 
