--- a/src/app/pages/articulo/articulo.component.html
+++ b/src/app/pages/articulo/articulo.component.html
@@ -210,12 +210,12 @@
                             </div>
                         </div>
                         <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" id="estado_articulo" [checked]="articuloEditar.id_estado === 2">
+                            <input (change)="marcarCheck()" type="checkbox" class="form-check-input" id="estado_articulo" [checked]="articuloEditar.id_estado === 2">
                             <label class="form-check-label" for="estado_articulo">Marcar como Inactivo</label>
                         </div>
 
                         <button type="submit" class="btn btn-primary" [disabled]="articuloEditarForm.invalid"
-                            (click)="submitEdit()">Grabar</button>
+                            (click)="submitEdit()" data-dismiss="modal">Grabar</button>
 
                         <div *ngIf="formDir.submitted">
                             <!-- <p>Esta submitted</p> -->
